[package]
name = "tasks-mine"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-i18n.workspace = true
tools.workspace = true

[lints]
workspace = true

